working on the scss

--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -1,4 +1,22 @@
-<h1>Current Player: {{ player }}</h1>
+
+<div class="wrapper">
+    <div class="container">
+        <h1>Current Player: {{ player }}</h1>
+        <button (click)="newGame()">Start new Game</button>
+        <h2 *ngIf="winner"> Player {{ winner }} won the game</h2>
+        <div class="card-container">
+            <app-square 
+                *ngFor="let val of squares; let i = index" 
+                [value]="val"
+                (click)="makeMove(i)"> 
+        
+            </app-square>
+        </div>
+    </div>
+</div>
+
+
+<!-- <h1>Current Player: {{ player }}</h1>
 
 
 <button (click)="newGame()">Start new Game</button>
@@ -16,4 +34,4 @@
         (click)="makeMove(i)"> 
 
     </app-square>
-</main>
+</main> -->
