--- a/src/app/board/board.component.scss
+++ b/src/app/board/board.component.scss
@@ -1,11 +1,30 @@
-main {
+.card-container {
     display: grid;
     grid-template-columns: 200px 200px 200px;
-    grid-gap: 0px
+    grid-gap: 0px;
+    align-items: center;
+
+    
+}
+
+.container {
+    display: inline-block;
+}
+
+
+
+
+.wrapper{
+    width: 100%;
+    text-align: center;
 }
 
 
 app-square {
     border: 1px gray solid;
     height: 200px;
+}
+
+button {
+    margin-bottom: 100px;
 }
